@@ -1,3 +1,8 @@
+2005-01-17  Sushma Rai  <rsushma@novell.com>
+
+	* camel/camel-exchange-provider.c: Moved password expiry warning 
+	period and offline sync options under one section.
+
 2005-01-16  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* calendar/e-cal-backend-exchange-calendar.c : Fixed the add_ical and
